--- a/client/display.html
+++ b/client/display.html
@@ -7,14 +7,19 @@
 
         <link rel="stylesheet" href="common.css" />
         <link rel="stylesheet" href="display.css" />
+        <title>display</title>
     </head>
-    <body>
+    <body class="ready">
         <div class="main">
             <div class="header"></div>
 
             <div class="content">
-                <p class="message-ready">Prêt...</p>
-                <p class="message-playing">buzzez !</p>
+                <div class="message-ready">
+                    <p>Prêt...</p>
+                </div>
+                <div class="message-playing">
+                    <p>buzzez !</p>
+                </div>
                 <div class="message-paused">
                     <p class="player-name"></p>
                     <p class="message">A LA MAIN</p>
@@ -38,25 +43,28 @@
             socket.on('game', function (game) {
                 body = document.querySelector('body')
                 if (game.status === STATUS_LIST.PAUSED) {
+                    body.className = ''
+
                     body.classList.remove('playing')
                     body.classList.add('paused')
 
                     if (game.activePlayer) {
                         body.classList.add('active-player')
-                        document.querySelector('.player-name').innerHTML = game.activePlayer.nickname
+                        document.querySelector('.player-name').innerHTML = game.players.find(pl => pl.uuid === game.activePlayer).nickname
                     }                    
                 }
 
                 if (game.status === STATUS_LIST.READY) {
-                    body.classList.remove('active-player')
-                    body.classList.remove('paused')
+                    body.className = ''
+
                     body.classList.add('ready')
                     document.querySelector('.player-name').innerHTML = ''
                 }
 
                 if (game.status === STATUS_LIST.PLAYING) {
-                    body.classList.remove('ready')
-                    body.classList.remove('playing')
+                    body.className = ''
+                    
+                    body.classList.add('playing')
                 }
 
                 renderTop(game.players)
@@ -66,11 +74,16 @@
             function renderTop (players) {
                 localPlayers = players.slice();
 
-                localPlayers.sort((pl1, pl2) => pl1.score - pl2.score)
+                localPlayers.sort((pl1, pl2) => pl2.score - pl1.score)
 
                 var html = ''
-                localPlayers.forEach((pl, index) => {
-                    html += '<li>' + (index + 1) + '. ' + pl.nickname + ' <span class="score">' + pl.score + '</span></li>'
+                var index = 0
+                localPlayers.forEach((pl) => {
+                    if (pl.active === true) {
+                        if (index < 10)
+                            html += '<li>' + (index + 1) + '. ' + pl.nickname + (index === 0 ? '<span class="crown"></span>' : '') + ' <span class="score">' + pl.score + ' pt' + (parseInt(pl.score, 10) > 1 ? 's' : '') + '</span></li>'
+                        index++
+                    }                    
                 });
 
                 document.querySelector('.top-players').innerHTML = '<ul>' + html + '</ul>'
